update index.html and style.css and fix horizontal scroll

--- a/styles.css
+++ b/styles.css
@@ -475,7 +475,6 @@ ul.dropdown {
   font-size: 20px;
   text-align: center;
   color: #ebebff;
-  padding-left: 5%;
   margin: 2%;
 }
 
